# incognia-python

./: .gitignore  CODEOWNERS  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yaml  continuous.yaml  continuous.yml
api/: aware_networking_token.py
incognia/: __init__.py  api.py  base_request.py  datetime_util.py  endpoints.py  exceptions.py  feedback_events.py  json_util.py  models.py  post_signup_request_json_encoder.py  token_manager.py
incognia_api/: endpoints.py  exceptions.py  incognia_api.py  post_signup_request_body.py  token_manager.py
tests/: test_api.py  test_base_request.py  test_incognia_api.py  test_post_signup_request_json_encoder.py  test_token_manager.py
