[metadata]
name = incognia-python
description = Python lightweight client library for Incognia APIs
long_description = file: README.md
long_description_content_type = text/markdown
author = Incognia
author_email = opensource@incognia.com
url = https://github.com/inloco/incognia-python
license = MIT
license_files = LICENSE.txt
python_requires = >= 3.8
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = False
packages = find:
install_requires =
    requests

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
count = True
exclude =
    .svn,
    CVS,
    .bzr,
    .hg,
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    .env,
    .venv,
    env/,
    venv/,
    ENV/,
    env.bak/,
    venv.bak/
max-line-length = 100
show_source = True
statistics = True
